# SearchSmart_NotHard

./: .env  pyproject.toml
cli_assistant/: assistant.py  exa_client.py  groq_client.py  main.py  mongodb_client.py  tavily_client.py
